syntax = "proto3";

service ElectionService {
  rpc RequestVote(CandidateData) returns (Vote) {}
}

message CandidateData {
  int64 term = 1;
  int32 candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message Vote {
  int64 term = 1;
  bool voteGranted = 2;
}
