syntax = "proto3";

package grpc.replication;

service Replication {
  rpc AppendEntries(EntryData) returns (ReplicationResult) {}
}

message EntryData {
  int64 term = 1;
  string leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message ReplicationResult {
  int64 term = 1;
  bool success = 2;
}

message LogEntry {
  int64 term = 1;
  int64 index = 2;
  string command = 3;
}
